# solitario

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  instructivo.txt  main.cpp
.cache/clangd/index/: card.h.705C26E0FF92734D.idx  main.cpp.A0D64749B6660AC0.idx  solitario.h.E4631580603A4903.idx
engine/: CMakeLists.txt  card.cpp  card.h  solitario.cpp  solitario.h
ui/: CMakeLists.txt  main.cpp
ui/.cache/clangd/index/: main.cpp.AACBD9F503F39B1D.idx
ui/cmake/: FindSDL2_image.cmake
